After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 790015 - docs: Various linking and syntax fixes
docs: Various linking and syntax fixes
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2017-11-07 13:41 UTC by Philip Withnall
Modified: 2017-11-07 14:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
docs: Add recent version check macros to glib-sections.txt (1.48 KB, patch)
2017-11-07 13:41 UTC, Philip Withnall
committed Details | Review
docs: Add 2.56 to the API version reference in glib-docs.xml (1.02 KB, patch)
2017-11-07 13:41 UTC, Philip Withnall
none Details | Review
docs: Add version and deprecation decorators to gtk-doc ignore list (14.05 KB, patch)
2017-11-07 13:41 UTC, Philip Withnall
committed Details | Review
docs: Make argument names in GAppInfo consistent (6.26 KB, patch)
2017-11-07 13:41 UTC, Philip Withnall
committed Details | Review
docs: Fix various minor syntax errors in gtk-doc comments (15.37 KB, patch)
2017-11-07 13:42 UTC, Philip Withnall
committed Details | Review
docs: Add 2.56 to the API version reference in glib-docs.xml (1.02 KB, patch)
2017-11-07 13:56 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2017-11-07 13:41:28 UTC
Some mostly-trivial patches attached.
Comment 1 Philip Withnall 2017-11-07 13:41:38 UTC
Created attachment 363141 [details] [review]
docs: Add recent version check macros to glib-sections.txt

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 2 Philip Withnall 2017-11-07 13:41:44 UTC
Created attachment 363142 [details] [review]
docs: Add 2.56 to the API version reference in glib-docs.xml

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 3 Philip Withnall 2017-11-07 13:41:50 UTC
Created attachment 363143 [details] [review]
docs: Add version and deprecation decorators to gtk-doc ignore list

This allows gtk-doc to recognise a whole lot more API than it could
before. Maintaining the lists between 6 build files is going to be a bit
of a pain, but they only need to be modified once a cycle.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=789087
Comment 4 Philip Withnall 2017-11-07 13:41:57 UTC
Created attachment 363144 [details] [review]
docs: Make argument names in GAppInfo consistent

This fixes a mismatch between some of the gtk-doc comments and reality.

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 5 Philip Withnall 2017-11-07 13:42:04 UTC
Created attachment 363145 [details] [review]
docs: Fix various minor syntax errors in gtk-doc comments

This will fix a few broken links in the documentation, and shut up a
load of gtk-doc warnings (but certainly not all of them).

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 6 Philip Withnall 2017-11-07 13:56:39 UTC
Created attachment 363146 [details] [review]
docs: Add 2.56 to the API version reference in glib-docs.xml

Signed-off-by: Philip Withnall <withnall@endlessm.com>
Comment 7 Emmanuele Bassi (:ebassi) 2017-11-07 14:12:55 UTC
Review of attachment 363141 [details] [review]:

ACK
Comment 8 Emmanuele Bassi (:ebassi) 2017-11-07 14:14:30 UTC
Review of attachment 363143 [details] [review]:

And at some point, we're going to maintain only the ones in Meson…
Comment 9 Emmanuele Bassi (:ebassi) 2017-11-07 14:15:16 UTC
Review of attachment 363144 [details] [review]:

:thumbsup:
Comment 10 Emmanuele Bassi (:ebassi) 2017-11-07 14:19:36 UTC
Review of attachment 363145 [details] [review]:

::: gio/gtlsdatabase.c
@@ +460,3 @@
  *
  * @chain is a chain of #GTlsCertificate objects each pointing to the next
+ * certificate in the chain by its `issuer` property. The chain may initially

This could be replaced by "#GtlsCertificate:issuer" to link to the appropriate property documentation blurb.
Comment 11 Emmanuele Bassi (:ebassi) 2017-11-07 14:19:52 UTC
Review of attachment 363146 [details] [review]:

ACK
Comment 12 Philip Withnall 2017-11-07 14:52:02 UTC
Thanks for the fast review. Pushed with the fix suggested in comment #10.

Attachment 363141 [details] pushed as 6546d87 - docs: Add recent version check macros to glib-sections.txt
Attachment 363143 [details] pushed as a12fbd2 - docs: Add version and deprecation decorators to gtk-doc ignore list
Attachment 363144 [details] pushed as 249d74f - docs: Make argument names in GAppInfo consistent
Attachment 363145 [details] pushed as 8e8f4e6 - docs: Fix various minor syntax errors in gtk-doc comments
Attachment 363146 [details] pushed as f33ca57 - docs: Add 2.56 to the API version reference in glib-docs.xml